Add new components and styles

--- a/content/certifications.mdx
+++ b/content/certifications.mdx
@@ -1,1 +1,9 @@
-Certifications >>
+import MonthYear from "../components/monthYear"
+
+### Acquia Certified Developer - Drupal 8
+
+Date Issued: <MonthYear year={2019} month={2} />
+
+No Expiration
+
+[See Credential](https://certification.acquia.com/user/1651991)
