--- a/content/education.mdx
+++ b/content/education.mdx
@@ -1,1 +1,13 @@
-Education >>
+import MonthYear from "../components/monthYear"
+
+### Christopher Newport University
+
+<MonthYear year={2005} month={8} /> - <MonthYear year={2008} month={5} />
+
+B.S. in Computer Science
+
+### Paul D. Camp Community College
+
+<MonthYear year={2003} month={8} /> - <MonthYear year={2005} month={5} />
+
+A.A.S. General Studies
