--- a/content/experience.mdx
+++ b/content/experience.mdx
@@ -1,1 +1,56 @@
-Experience >>
+import MonthYear from "../components/monthYear"
+
+### Web Application Developer
+
+[UNC School of Government](https://www.sog.unc.edu/)
+
+<MonthYear year={2020} month={4} /> - Current
+
+- Developed React front-ends for decoupled web applications
+- Developed Drupal 8/9 themes and custom modules
+- Created migration workflow for exporting publication content, formatting the content into semantic markup, and importing the data into a web CMS platform
+
+### Software Engineer - III
+
+[NETE](https://nete.com/)
+
+<MonthYear year={2019} month={4} /> - <MonthYear year={2020} month={3} />
+
+- Developed migration scripts to export content from NIEHS public websites and import the data into Drupal
+- Developed Custom Drupal 8 modules to automate workflow tasks for content authors
+- Created drupal themes to recreate front-end designs originally implemented in ColdFusion.
+
+### Sr. Web Application Developer
+
+[MCNC](https://mcnc.org/)
+
+<MonthYear year={2012} month={7} /> - <MonthYear year={2019} month={4} />
+
+- Managed and maintained multiple websites built on Drupal 6, 7, and 8.
+- Project lead on migrating content, themes, and custom modules to Drupal 8.
+- Developed custom integrations between Drupal, Salesforce, and multiple internal systems.
+- Administrator for CRM (Salesforce)and CLM (SpringCM)
+
+### Freelance Web Developer
+
+<MonthYear year={2011} month={3} /> - <MonthYear year={2012} month={7} />
+
+- Provided contract web development services specializing in Drupal and Wordpress
+
+### Network Engineer / Web Developer
+
+Corstar Communications
+
+<MonthYear year={2011} month={8} /> - <MonthYear year={2012} month={5} />
+
+### Web Developer
+
+33Delivered
+
+<MonthYear year={2009} month={10} /> - <MonthYear year={2011} month={3} />
+
+### Web Developer
+
+KutterGroup, LLC
+
+<MonthYear year={2008} month={9} /> - <MonthYear year={2009} month={10} />
