--- a/content/about.mdx
+++ b/content/about.mdx
@@ -1,1 +1,5 @@
-About >>
+I am a senior Web Application Developer who has been been developing web based
+solutions for well over a decade and have worked with many different technology stacks
+throughout my career. I have worked extensively with PHP-based content management
+systems such as [Drupal](https://www.drupal.org/), decoupled applications with modern [React](https://reactjs.org/) front ends, and leading-edge
+[Jamstack](https://jamstack.org/) solutions developed for serverless architecture.
