Updates to techSkill component

--- a/content/technologies.mdx
+++ b/content/technologies.mdx
@@ -10,6 +10,8 @@ import {
   SiGraphql,
   SiDrupal,
   SiWordpress,
+  SiReact,
+  SiNodeDotJs,
   SiNextDotJs,
   SiGatsby,
 } from "react-icons/si";
@@ -52,6 +54,14 @@ import {
 
 <TechSkill skillName="Wordpress" exp="4" maxExp={MAX_EXP_YEARS}>
   <SiWordpress title="Wordpress Logo" size={ICON_SIZE} color={ICON_COLOR} />
+</TechSkill>
+
+<TechSkill skillName="React" exp="3" maxExp={MAX_EXP_YEARS}>
+  <SiReact title="React Logo" size={ICON_SIZE} color={ICON_COLOR} />
+</TechSkill>
+
+<TechSkill skillName="Node.js" exp="3" maxExp={MAX_EXP_YEARS}>
+  <SiNodeDotJs title="Node Logo.js" size={ICON_SIZE} color={ICON_COLOR} />
 </TechSkill>
 
 <TechSkill skillName="Next.js" exp="2" maxExp={MAX_EXP_YEARS}>
