Add breakpoints object

--- a/content/education.mdx
+++ b/content/education.mdx
@@ -2,12 +2,12 @@ import MonthYear from "../components/monthYear"
 
 ### Christopher Newport University
 
-<MonthYear year={2005} month={8} /> - <MonthYear year={2008} month={5} />
+Bachelor of Science, Computer Science
 
-B.S. in Computer Science
+<p><MonthYear year={2005} month={8} /> - <MonthYear year={2008} month={5} /></p>
 
 ### Paul D. Camp Community College
 
-<MonthYear year={2003} month={8} /> - <MonthYear year={2005} month={5} />
+Associate of Arts and Sciences, General Studies
 
-A.A.S. General Studies
+<p><MonthYear year={2003} month={8} /> - <MonthYear year={2005} month={5} /></p>
