--- a/content/experience.mdx
+++ b/content/experience.mdx
@@ -2,7 +2,7 @@ import MonthYear from "../components/monthYear"
 
 ### Web Application Developer
 
-[UNC School of Government](https://www.sog.unc.edu/)
+UNC School of Government
 
 <MonthYear year={2020} month={4} /> - Current
 
@@ -12,7 +12,7 @@ import MonthYear from "../components/monthYear"
 
 ### Software Engineer - III
 
-[NETE](https://nete.com/)
+NETE
 
 <MonthYear year={2019} month={4} /> - <MonthYear year={2020} month={3} />
 
@@ -22,7 +22,7 @@ import MonthYear from "../components/monthYear"
 
 ### Sr. Web Application Developer
 
-[MCNC](https://mcnc.org/)
+MCNC
 
 <MonthYear year={2012} month={7} /> - <MonthYear year={2019} month={4} />
 
