--- a/content/technologies.mdx
+++ b/content/technologies.mdx
@@ -46,7 +46,7 @@ import {
   <SiTypescript title="Typescript Logo" size={ICON_SIZE} color={ICON_COLOR} />
 </TechSkill>
 
-### Frameworks and Content Management
+### Frameworks and CMS
 
 <TechSkill skillName="Drupal" exp="10" maxExp={MAX_EXP_YEARS}>
   <SiDrupal title="Drupal Logo" size={ICON_SIZE} color={ICON_COLOR} />
