Remove api route

--- a/content/certifications.mdx
+++ b/content/certifications.mdx
@@ -6,4 +6,4 @@ Date Issued: <MonthYear year={2019} month={2} />
 
 No Expiration
 
-[See Credential](https://certification.acquia.com/user/1651991)
+[See Credential](https://certification.acquia.com/user/5722)
