--- a/content/experience.mdx
+++ b/content/experience.mdx
@@ -2,7 +2,7 @@ import MonthYear from "../components/monthYear"
 
 ### Web Application Developer
 
-UNC School of Government
+<p><span class="org-name">UNC School of Government</span></p>
 
 <MonthYear year={2020} month={4} /> - Current
 
@@ -12,7 +12,7 @@ UNC School of Government
 
 ### Software Engineer - III
 
-NETE
+<p><span class="org-name">NETE</span></p>
 
 <MonthYear year={2019} month={4} /> - <MonthYear year={2020} month={3} />
 
@@ -22,14 +22,13 @@ NETE
 
 ### Sr. Web Application Developer
 
-MCNC
+<p><span class="org-name">MCNC</span></p>
 
 <MonthYear year={2012} month={7} /> - <MonthYear year={2019} month={4} />
 
 - Managed and maintained multiple websites built on Drupal 6, 7, and 8.
 - Project lead on migrating content, themes, and custom modules to Drupal 8.
 - Developed custom integrations between Drupal, Salesforce, and multiple internal systems.
-- Administrator for CRM (Salesforce)and CLM (SpringCM)
 
 ### Freelance Web Developer
 
@@ -39,18 +38,18 @@ MCNC
 
 ### Network Engineer / Web Developer
 
-Corstar Communications
+<p><span class="org-name">Corstar Communications</span></p>
 
 <MonthYear year={2011} month={8} /> - <MonthYear year={2012} month={5} />
 
 ### Web Developer
 
-33Delivered
+<p><span class="org-name">33Delivered</span></p>
 
 <MonthYear year={2009} month={10} /> - <MonthYear year={2011} month={3} />
 
 ### Web Developer
 
-KutterGroup, LLC
+<p><span class="org-name">KutterGroup, LLC</span></p>
 
 <MonthYear year={2008} month={9} /> - <MonthYear year={2009} month={10} />
