Clean up accessibility issues with contact links.

--- a/content/contact.mdx
+++ b/content/contact.mdx
@@ -3,13 +3,13 @@ import { ICON_SIZE, ICON_COLOR } from "../lib/util";
 import ContactLink from "../components/contactLink";
 
 <ContactLink linkText="GitHub" linkUrl="https://github.com/dcgoodwin2112">
-  <SiGithub size={ICON_SIZE} color={ICON_COLOR} />
+  <SiGithub size={ICON_SIZE} color={ICON_COLOR} title="GitHub" />
 </ContactLink>
 
 <ContactLink linkText="Twitter" linkUrl="https://twitter.com/dcgoodwin2112">
-  <SiTwitter size={ICON_SIZE} color={ICON_COLOR} />
+  <SiTwitter size={ICON_SIZE} color={ICON_COLOR} title="twitter" />
 </ContactLink>
 
 <ContactLink linkText="LinkedIn" linkUrl="https://www.linkedin.com/in/dcgoodwin2112/">
-  <SiLinkedin size={ICON_SIZE} color={ICON_COLOR} />
+  <SiLinkedin size={ICON_SIZE} color={ICON_COLOR} title="LinkedIn" />
 </ContactLink>
