--- a/content/experience.mdx
+++ b/content/experience.mdx
@@ -22,7 +22,7 @@ import MonthYear from "../components/monthYear"
 
 ### Sr. Web Application Developer
 
-<p><span class="org-name">MCNC</span></p>
+<p><span className="org-name">MCNC</span></p>
 
 <MonthYear year={2012} month={7} /> - <MonthYear year={2019} month={4} />
 
@@ -38,18 +38,18 @@ import MonthYear from "../components/monthYear"
 
 ### Network Engineer / Web Developer
 
-<p><span class="org-name">Corstar Communications</span></p>
+<p><span className="org-name">Corstar Communications</span></p>
 
 <MonthYear year={2011} month={8} /> - <MonthYear year={2012} month={5} />
 
 ### Web Developer
 
-<p><span class="org-name">33Delivered</span></p>
+<p><span className="org-name">33Delivered</span></p>
 
 <MonthYear year={2009} month={10} /> - <MonthYear year={2011} month={3} />
 
 ### Web Developer
 
-<p><span class="org-name">KutterGroup, LLC</span></p>
+<p><span className="org-name">KutterGroup, LLC</span></p>
 
 <MonthYear year={2008} month={9} /> - <MonthYear year={2009} month={10} />
