Add print styles

--- a/content/about.mdx
+++ b/content/about.mdx
@@ -1,4 +1,4 @@
-I am a senior Web Application Developer who has been been developing web based
+I am a senior Web Application Developer who has been been developing web-based
 solutions for well over a decade and have worked with many different technology stacks
 throughout my career. I have worked extensively with php-driven content management
 systems such as [Drupal](https://www.drupal.org/), decoupled applications with modern
