--- a/content/education.mdx
+++ b/content/education.mdx
@@ -6,8 +6,9 @@ Bachelor of Science, Computer Science
 
 <p><MonthYear year={2005} month={8} /> - <MonthYear year={2008} month={5} /></p>
 
-### Paul D. Camp Community College
+<h3 className="exclude-print">Paul D. Camp Community College</h3>
 
-Associate of Arts and Sciences, General Studies
+<p className="exclude-print">Associate of Arts and Sciences, General Studies</p>
 
-<p><MonthYear year={2003} month={8} /> - <MonthYear year={2005} month={5} /></p>
+<p className="exclude-print"><MonthYear year={2003} month={8} /> - <MonthYear year={2005} month={5} /></p>
+
