--- a/content/experience.mdx
+++ b/content/experience.mdx
@@ -2,7 +2,7 @@ import MonthYear from "../components/monthYear"
 
 ### Web Application Developer
 
-<p><span class="org-name">UNC School of Government</span></p>
+<p><span className="org-name">UNC School of Government</span></p>
 
 <MonthYear year={2020} month={4} /> - Current
 
@@ -12,7 +12,7 @@ import MonthYear from "../components/monthYear"
 
 ### Software Engineer - III
 
-<p><span class="org-name">NETE</span></p>
+<p><span className="org-name">NETE</span></p>
 
 <MonthYear year={2019} month={4} /> - <MonthYear year={2020} month={3} />
 
