Add Section for community and open source

--- a/content/experience.mdx
+++ b/content/experience.mdx
@@ -18,17 +18,17 @@ import MonthYear from "../components/monthYear"
 
 - Developed migration scripts to export content from NIEHS public websites and import the data into Drupal
 - Developed Custom Drupal 8 modules to automate workflow tasks for content authors
-- Created drupal themes to recreate front-end designs originally implemented in ColdFusion.
+- Created drupal themes to recreate front-end designs originally implemented in ColdFusion
 
-### Sr. Web Application Developer
+### Senior Web Application Developer
 
 <p><span className="org-name">MCNC</span></p>
 
 <MonthYear year={2012} month={7} /> - <MonthYear year={2019} month={4} />
 
-- Managed and maintained multiple websites built on Drupal 6, 7, and 8.
-- Project lead on migrating content, themes, and custom modules to Drupal 8.
-- Developed custom integrations between Drupal, Salesforce, and multiple internal systems.
+- Managed and maintained multiple websites built on Drupal 6, 7, and 8
+- Project lead on migrating content, themes, and custom modules to Drupal 8
+- Developed custom integrations between Drupal, Salesforce, and multiple internal systems
 
 ### Freelance Web Developer
 
@@ -40,16 +40,23 @@ import MonthYear from "../components/monthYear"
 
 <p><span className="org-name">Corstar Communications</span></p>
 
+- Onsite IT support for K-12 Education
+- Wordpress website development
+
 <MonthYear year={2011} month={8} /> - <MonthYear year={2012} month={5} />
 
 ### Web Developer
 
 <p><span className="org-name">33Delivered</span></p>
 
+- Built websites using Wordpress and PHP frameworks
+
 <MonthYear year={2009} month={10} /> - <MonthYear year={2011} month={3} />
 
 ### Web Developer
 
 <p><span className="org-name">KutterGroup, LLC</span></p>
+
+- Developed client websites using Drupal
 
 <MonthYear year={2008} month={9} /> - <MonthYear year={2009} month={10} />
