--- a/content/about.mdx
+++ b/content/about.mdx
@@ -1,6 +1,6 @@
-I am a senior Web Application Developer who has been been developing web-based
-solutions for well over a decade and have worked with many different technology stacks
-throughout my career. I have worked extensively with php-driven content management
-systems such as [Drupal](https://www.drupal.org/), decoupled applications with modern
+I am a senior Web Application Developer with over a decade of experince developing
+web-based solutions on many different technology stacks. Throughout my career, I
+have worked extensively with php-driven content management systems such as
+[Drupal](https://www.drupal.org/), decoupled applications with modern
 [React](https://reactjs.org/) front ends, and leading-edge [Jamstack](https://jamstack.org/)
 solutions developed for serverless architecture.
