Content update. Capitalization

--- a/content/openSource.mdx
+++ b/content/openSource.mdx
@@ -2,7 +2,7 @@
 
 Developed a plugin for using excel data in an Eleventy site.
 
-[npm Package](https://www.npmjs.com/package/eleventy-plugin-xlsx)
+[npm package](https://www.npmjs.com/package/eleventy-plugin-xlsx)
 
 ### Getting Started with Gatsby + Drupal
 
