Content update. Capitalization

--- a/content/openSource.mdx
+++ b/content/openSource.mdx
@@ -7,7 +7,7 @@ Developed a plugin for using excel data in an Eleventy site.
 ### Getting Started with Gatsby + Drupal
 
 Presentation given at the Triangle Drupal Users group Meetup showcasing a
-decoupled application built with GatsbyJs and Drupal 8. <time dateTime="2019-11-21">November 21, 2019</time>
+decoupled application built with GatsbyJS and Drupal 8. <time dateTime="2019-11-21">November 21, 2019</time>
 
 [Meetup page](https://www.meetup.com/TriDUG/events/twctrlyzpblc/)
 
