Spelling fix in about section

--- a/content/about.mdx
+++ b/content/about.mdx
@@ -1,4 +1,4 @@
-I am a senior Web Application Developer with over a decade of experince developing
+I am a senior Web Application Developer with over a decade of experience developing
 web-based solutions on many different technology stacks. Throughout my career, I
 have worked extensively with php-driven content management systems such as
 [Drupal](https://www.drupal.org/), decoupled applications with modern
