--- a/content/experience.mdx
+++ b/content/experience.mdx
@@ -8,7 +8,7 @@ import MonthYear from "../components/monthYear"
 
 - Developed React front-ends for decoupled web applications
 - Developed Drupal 8/9 themes and custom modules
-- Created migration workflow for exporting publication content, formatting the content into semantic markup, and importing the data into a web CMS platform
+- Automated data migration for publications content
 
 ### Software Engineer - III
 
@@ -16,9 +16,9 @@ import MonthYear from "../components/monthYear"
 
 <MonthYear year={2019} month={4} /> - <MonthYear year={2020} month={3} />
 
-- Developed migration scripts to export content from NIEHS public websites and import the data into Drupal
-- Developed Custom Drupal 8 modules to automate workflow tasks for content authors
-- Created drupal themes to recreate front-end designs originally implemented in ColdFusion
+- Automated content migration from existing NIEHS websites to Drupal
+- Automated workflow tasks for content authors
+- Migrated front-end designs originally implemented in ColdFusion to Drupal 8 themes
 
 ### Senior Web Application Developer
 
@@ -28,7 +28,7 @@ import MonthYear from "../components/monthYear"
 
 - Managed and maintained multiple websites built on Drupal 6, 7, and 8
 - Project lead on migrating content, themes, and custom modules to Drupal 8
-- Developed custom integrations between Drupal, Salesforce, and multiple internal systems
+- Integrated Drupal, Salesforce, and multiple internal systems
 
 ### Freelance Web Developer
 
