--- a/content/openSource.mdx
+++ b/content/openSource.mdx
@@ -1,6 +1,6 @@
 ### Eleventy XLSX Plugin
 
-Developed a plugin for using excel data in an Eleventy site.
+Created a plugin that converts excel spreadsheets to json data files and saves the output for use on eleventy sites.
 
 [npm package](https://www.npmjs.com/package/eleventy-plugin-xlsx)
 
