--- a/content/experience.mdx
+++ b/content/experience.mdx
@@ -4,7 +4,7 @@ import MonthYear from "../components/monthYear"
 
 <p><span className="org-name">UNC School of Government</span></p>
 
-<MonthYear year={2020} month={4} /> - Current
+<MonthYear year={2020} month={4} /> - <MonthYear year={2021} month={6} />
 
 - Developed React front-ends for decoupled web applications
 - Developed Drupal 8/9 themes and custom modules
