Add CivicActions as current position

--- a/content/experience.mdx
+++ b/content/experience.mdx
@@ -1,5 +1,11 @@
 import MonthYear from "../components/monthYear"
 
+### Front End Engineer
+
+<p><span className="org-name">CivicActions</span></p>
+
+<MonthYear year={2021} month={9} /> - Current
+
 ### Web Application Developer
 
 <p><span className="org-name">UNC School of Government</span></p>
