--- a/content/experience.mdx
+++ b/content/experience.mdx
@@ -4,6 +4,8 @@ import MonthYear from "../components/monthYear"
 
 <p><span className="org-name">CivicActions</span></p>
 
+- Implemented new features on VA.gov using React and other front-end technologies
+
 <MonthYear year={2021} month={9} /> - Current
 
 ### Web Application Developer
