Update broken icons. Update experience

--- a/content/openSource.mdx
+++ b/content/openSource.mdx
@@ -1,8 +1,8 @@
-### Eleventy XLSX Plugin
+<!-- ### Eleventy XLSX Plugin
 
 Created a plugin that converts excel spreadsheets to json data files and saves the output for use on eleventy sites.
 
-[npm package](https://www.npmjs.com/package/eleventy-plugin-xlsx)
+[npm package](https://www.npmjs.com/package/eleventy-plugin-xlsx) -->
 
 ### Getting Started with Gatsby + Drupal
 
