--- a/content/technologies.mdx
+++ b/content/technologies.mdx
@@ -11,8 +11,8 @@ import {
   SiDrupal,
   SiWordpress,
   SiReact,
-  SiNodeDotJs,
-  SiNextDotJs,
+  SiNodedotjs,
+  SiNextdotjs,
   SiGatsby,
 } from "react-icons/si";
 
@@ -61,11 +61,11 @@ import {
 </TechSkill>
 
 <TechSkill skillName="Node.js" exp="3" maxExp={MAX_EXP_YEARS}>
-  <SiNodeDotJs title="Node Logo.js" size={ICON_SIZE} color={ICON_COLOR} />
+  <SiNodedotjs title="Node Logo.js" size={ICON_SIZE} color={ICON_COLOR} />
 </TechSkill>
 
 <TechSkill skillName="Next.js" exp="2" maxExp={MAX_EXP_YEARS}>
-  <SiNextDotJs title="Next.js Logo" size={ICON_SIZE} color={ICON_COLOR} />
+  <SiNextdotjs title="Next.js Logo" size={ICON_SIZE} color={ICON_COLOR} />
 </TechSkill>
 
 <TechSkill skillName="Gatsby" exp="2" maxExp={MAX_EXP_YEARS}>
