--- a/content/experience.mdx
+++ b/content/experience.mdx
@@ -1,12 +1,25 @@
 import MonthYear from "../components/monthYear"
 
+### Associate Director of Front End Engineering
+
+<p><span className="org-name">CivicActions</span></p>
+
+- Participate as a front-end engineer on agile teams working with Federal agencies including:
+  - The Department of Veterans Affairs
+  - Centers for Medicare & Medicaid Services
+- Manage a team of direct reports across multiple projects
+- Develop OKRs and training opportunities for the Front End Practice Area
+- Conduct interviews and review resumes for new hires
+
+<MonthYear year={2021} month={9} /> - Current
+
 ### Front End Engineer
 
 <p><span className="org-name">CivicActions</span></p>
 
 - Implemented new features on VA.gov using React and other front-end technologies
 
-<MonthYear year={2021} month={9} /> - Current
+<MonthYear year={2021} month={9} /> - <MonthYear year={2022} month={1} />
 
 ### Web Application Developer
 
@@ -38,33 +51,32 @@ import MonthYear from "../components/monthYear"
 - Project lead on migrating content, themes, and custom modules to Drupal 8
 - Integrated Drupal, Salesforce, and multiple internal systems
 
-### Freelance Web Developer
+<div class="exclude-print">
+  <h3>Freelance Web Developer</h3>
+  <ul>
+    <li>Provided contract web development services specializing in Drupal and Wordpress</li>
+  </ul>
+  <MonthYear year={2011} month={3} /> - <MonthYear year={2012} month={7} />
 
-<MonthYear year={2011} month={3} /> - <MonthYear year={2012} month={7} />
+  <h3>Network Engineer / Web Developer</h3>
+  <p><span className="org-name">Corstar Communications</span></p>
+  <ul>
+    <li>Onsite IT support for K-12 Education</li>
+    <li>Wordpress website development</li>
+  </ul>
+  <MonthYear year={2011} month={8} /> - <MonthYear year={2012} month={5} />
 
-- Provided contract web development services specializing in Drupal and Wordpress
+  <h3>Web Developer</h3>
+  <p><span className="org-name">33Delivered</span></p>
+  <ul>
+    <li>Built websites using Wordpress and PHP frameworks</li>
+  </ul>
+  <MonthYear year={2009} month={10} /> - <MonthYear year={2011} month={3} />
 
-### Network Engineer / Web Developer
-
-<p><span className="org-name">Corstar Communications</span></p>
-
-- Onsite IT support for K-12 Education
-- Wordpress website development
-
-<MonthYear year={2011} month={8} /> - <MonthYear year={2012} month={5} />
-
-### Web Developer
-
-<p><span className="org-name">33Delivered</span></p>
-
-- Built websites using Wordpress and PHP frameworks
-
-<MonthYear year={2009} month={10} /> - <MonthYear year={2011} month={3} />
-
-### Web Developer
-
-<p><span className="org-name">KutterGroup, LLC</span></p>
-
-- Developed client websites using Drupal
-
-<MonthYear year={2008} month={9} /> - <MonthYear year={2009} month={10} />
+  <h3>Web Developer</h3>
+  <p><span className="org-name">KutterGroup, LLC</span></p>
+  <ul>
+    <li>Developed client websites using Drupal</li>
+  </ul>
+  <MonthYear year={2008} month={9} /> - <MonthYear year={2009} month={10} />
+</div>
