--- a/content/technologies.mdx
+++ b/content/technologies.mdx
@@ -11,8 +11,8 @@ import {
   SiDrupal,
   SiWordpress,
   SiReact,
-  SiNodedotjs,
-  SiNextdotjs,
+  SiNodeDotJs,
+  SiNextDotJs,
   SiGatsby,
 } from "react-icons/si";
 
@@ -34,15 +34,11 @@ import {
   <SiCss3 title="CSS Logo" size={ICON_SIZE} color={ICON_COLOR} />
 </TechSkill>
 
-<TechSkill skillName="MySql" exp="10" maxExp={MAX_EXP_YEARS}>
-  <SiMysql title="MySql Logo" size={ICON_SIZE} color={ICON_COLOR} />
-</TechSkill>
-
 <TechSkill skillName="GraphQL" exp="2" maxExp={MAX_EXP_YEARS}>
   <SiGraphql title="GraphQL Logo" size={ICON_SIZE} color={ICON_COLOR} />
 </TechSkill>
 
-<TechSkill skillName="Typescript" exp="2" maxExp={MAX_EXP_YEARS}>
+<TechSkill skillName="Typescript" exp="3" maxExp={MAX_EXP_YEARS}>
   <SiTypescript title="Typescript Logo" size={ICON_SIZE} color={ICON_COLOR} />
 </TechSkill>
 
@@ -56,16 +52,16 @@ import {
   <SiWordpress title="Wordpress Logo" size={ICON_SIZE} color={ICON_COLOR} />
 </TechSkill>
 
-<TechSkill skillName="React" exp="3" maxExp={MAX_EXP_YEARS}>
+<TechSkill skillName="React" exp="4" maxExp={MAX_EXP_YEARS}>
   <SiReact title="React Logo" size={ICON_SIZE} color={ICON_COLOR} />
 </TechSkill>
 
 <TechSkill skillName="Node.js" exp="3" maxExp={MAX_EXP_YEARS}>
-  <SiNodedotjs title="Node Logo.js" size={ICON_SIZE} color={ICON_COLOR} />
+  <SiNodeDotJs title="Node Logo.js" size={ICON_SIZE} color={ICON_COLOR} />
 </TechSkill>
 
-<TechSkill skillName="Next.js" exp="2" maxExp={MAX_EXP_YEARS}>
-  <SiNextdotjs title="Next.js Logo" size={ICON_SIZE} color={ICON_COLOR} />
+<TechSkill skillName="Next.js" exp="3" maxExp={MAX_EXP_YEARS}>
+  <SiNextDotJs title="Next.js Logo" size={ICON_SIZE} color={ICON_COLOR} />
 </TechSkill>
 
 <TechSkill skillName="Gatsby" exp="2" maxExp={MAX_EXP_YEARS}>
